backend/src/interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RW_contar

Grammar

Rule 0     S' -> INIT
Rule 1     INIT -> INSTRUCTIONS
Rule 2     INIT -> <empty>
Rule 3     INSTRUCTIONS -> INSTRUCTIONS INSTRUCTION
Rule 4     INSTRUCTIONS -> INSTRUCTION
Rule 5     INSTRUCTION -> CREATEDB TK_semicolon
Rule 6     INSTRUCTION -> CREATETABLE TK_semicolon
Rule 7     INSTRUCTION -> ALTERTAB TK_semicolon
Rule 8     INSTRUCTION -> DROPTAB TK_semicolon
Rule 9     INSTRUCTION -> INSERTREG TK_semicolon
Rule 10    INSTRUCTION -> UPDATETAB TK_semicolon
Rule 11    INSTRUCTION -> TRUNCATETAB TK_semicolon
Rule 12    INSTRUCTION -> DELETETAB TK_semicolon
Rule 13    INSTRUCTION -> SELECT TK_semicolon
Rule 14    INSTRUCTION -> DECLAREID TK_semicolon
Rule 15    INSTRUCTION -> ASIGNID TK_semicolon
Rule 16    INSTRUCTION -> IFSTRUCT TK_semicolon
Rule 17    INSTRUCTION -> CASESTRUCT_S TK_semicolon
Rule 18    INSTRUCTION -> WHILESTRUCT TK_semicolon
Rule 19    INSTRUCTION -> FORSTRUCT TK_semicolon
Rule 20    INSTRUCTION -> FUNCDEC TK_semicolon
Rule 21    INSTRUCTION -> CALLFUNC TK_semicolon
Rule 22    INSTRUCTION -> ENCAP TK_semicolon
Rule 23    INSTRUCTION -> PRINT TK_semicolon
Rule 24    INSTRUCTION -> RW_break TK_semicolon
Rule 25    INSTRUCTION -> RW_continue TK_semicolon
Rule 26    INSTRUCTION -> RW_return EXP TK_semicolon
Rule 27    INSTRUCTION -> RW_return TK_semicolon
Rule 28    CREATEDB -> RW_create RW_data RW_base TK_field
Rule 29    DECLAREID -> RW_declare DECLIDS
Rule 30    DECLAREID -> RW_declare TK_id TYPE TK_equal EXP
Rule 31    DECLIDS -> DECLIDS TK_comma DECLID
Rule 32    DECLIDS -> DECLID
Rule 33    DECLID -> TK_id TYPE
Rule 34    ASIGNID -> RW_set TK_id TK_equal EXP
Rule 35    SELECT -> RW_select FIELDS RW_from TK_field RW_where EXP
Rule 36    SELECT -> RW_select FIELDS RW_from TK_field
Rule 37    SELECT -> RW_select LIST_IDS
Rule 38    FIELDS -> LIST_IDS
Rule 39    FIELDS -> TK_mult
Rule 40    LIST_IDS -> LIST_IDS TK_comma IDS
Rule 41    LIST_IDS -> IDS
Rule 42    IDS -> EXP RW_as TK_nvarchar
Rule 43    IDS -> EXP RW_as TK_field
Rule 44    IDS -> EXP
Rule 45    CREATETABLE -> RW_create RW_table TK_field TK_lpar ATTRIBUTES TK_rpar
Rule 46    ATTRIBUTES -> ATTRIBUTES TK_comma ATTRIBUTE
Rule 47    ATTRIBUTES -> ATTRIBUTE
Rule 48    ATTRIBUTE -> TK_field TYPE TK_lpar TK_int TK_rpar PROPS
Rule 49    ATTRIBUTE -> TK_field TYPE PROPS
Rule 50    ATTRIBUTE -> TK_field TYPE TK_lpar TK_int TK_rpar
Rule 51    ATTRIBUTE -> TK_field TYPE
Rule 52    ATTRIBUTE -> RW_foreing RW_key TK_lpar TK_field TK_rpar RW_ref TK_field TK_lpar TK_field TK_rpar
Rule 53    PROPS -> RW_not RW_null RW_primary RW_key
Rule 54    PROPS -> RW_primary RW_key RW_not RW_null
Rule 55    PROPS -> RW_not RW_null
Rule 56    PROPS -> RW_primary RW_key
Rule 57    ALTERTAB -> RW_alter RW_table TK_field ACTION
Rule 58    ACTION -> RW_add TK_field TYPE
Rule 59    ACTION -> RW_drop TK_field
Rule 60    ACTION -> RW_rename RW_to TK_field
Rule 61    ACTION -> RW_rename RW_column TK_field RW_to TK_field
Rule 62    DROPTAB -> RW_drop RW_table TK_field
Rule 63    INSERTREG -> RW_insert RW_into TK_field TK_lpar LIST_ATTRIBS TK_rpar RW_values TK_lpar LIST_EXPS TK_rpar
Rule 64    LIST_ATTRIBS -> LIST_ATTRIBS TK_comma TK_field
Rule 65    LIST_ATTRIBS -> TK_field
Rule 66    LIST_EXPS -> LIST_EXPS TK_comma EXP
Rule 67    LIST_EXPS -> EXP
Rule 68    UPDATETAB -> RW_update TK_field RW_set VALUESTAB RW_where EXP
Rule 69    VALUESTAB -> VALUESTAB TK_comma VALUETAB
Rule 70    VALUESTAB -> VALUETAB
Rule 71    VALUETAB -> TK_field TK_equal EXP
Rule 72    TRUNCATETAB -> RW_truncate RW_table TK_field
Rule 73    DELETETAB -> RW_delete RW_from TK_field RW_where EXP
Rule 74    IFSTRUCT -> RW_if EXP RW_then INSTRUCTIONS RW_else INSTRUCTIONS RW_end RW_if
Rule 75    IFSTRUCT -> RW_if EXP RW_then INSTRUCTIONS RW_end RW_if
Rule 76    IFSTRUCT -> RW_if EXP RW_begin INSTRUCTIONS RW_end
Rule 77    CASESTRUCT_S -> RW_case EXP WHENELSE RW_end RW_as TK_field
Rule 78    CASESTRUCT_S -> RW_case EXP WHENELSE RW_end RW_as TK_nvarchar
Rule 79    CASESTRUCT_S -> RW_case EXP WHENELSE RW_end
Rule 80    CASESTRUCT_S -> RW_case WHENELSE RW_end RW_as TK_field
Rule 81    CASESTRUCT_S -> RW_case WHENELSE RW_end RW_as TK_nvarchar
Rule 82    CASESTRUCT_S -> RW_case WHENELSE RW_end
Rule 83    WHENELSE -> WHENS ELSE
Rule 84    WHENELSE -> WHENS
Rule 85    WHENELSE -> ELSE
Rule 86    WHENS -> WHENS WHEN
Rule 87    WHENS -> WHEN
Rule 88    WHEN -> RW_when EXP RW_then EXP
Rule 89    ELSE -> RW_else RW_then EXP
Rule 90    PRINT -> RW_print EXP
Rule 91    WHILESTRUCT -> RW_while EXP ENCAP
Rule 92    FORSTRUCT -> RW_for TK_id RW_in EXP TK_dot EXP ENCAP RW_loop
Rule 93    FUNCDEC -> RW_create RW_function TK_field TK_lpar PARAMS TK_rpar RW_returns TYPE ENCAP
Rule 94    FUNCDEC -> RW_create RW_function TK_field TK_lpar TK_rpar RW_returns TYPE ENCAP
Rule 95    FUNCDEC -> RW_create RW_procedure TK_field PARAMS RW_as ENCAP
Rule 96    FUNCDEC -> RW_create RW_procedure TK_field RW_as ENCAP
Rule 97    FUNCDEC -> RW_create RW_procedure TK_field PARAMS ENCAP
Rule 98    FUNCDEC -> RW_create RW_procedure TK_field ENCAP
Rule 99    PARAMS -> PARAMS TK_comma PARAM
Rule 100   PARAMS -> PARAM
Rule 101   PARAM -> TK_id RW_as TYPE
Rule 102   ENCAP -> RW_begin INSTRUCTIONS RW_end
Rule 103   ENCAP -> RW_begin RW_end
Rule 104   CALLFUNC -> TK_field TK_lpar ARGS TK_rpar
Rule 105   CALLFUNC -> TK_field TK_lpar TK_rpar
Rule 106   ARGS -> ARGS TK_comma EXP
Rule 107   ARGS -> EXP
Rule 108   EXP -> ARITHMETICS
Rule 109   EXP -> RELATIONALS
Rule 110   EXP -> LOGICS
Rule 111   EXP -> CAST
Rule 112   EXP -> NATIVEFUNC
Rule 113   EXP -> CALLFUNC
Rule 114   EXP -> TERNARY
Rule 115   EXP -> TK_id
Rule 116   EXP -> TK_field
Rule 117   EXP -> TK_nvarchar
Rule 118   EXP -> TK_int
Rule 119   EXP -> TK_decimal
Rule 120   EXP -> TK_date
Rule 121   EXP -> TK_datetime
Rule 122   EXP -> RW_null
Rule 123   EXP -> TK_lpar EXP TK_rpar
Rule 124   ARITHMETICS -> EXP TK_plus EXP
Rule 125   ARITHMETICS -> EXP TK_minus EXP
Rule 126   ARITHMETICS -> EXP TK_mult EXP
Rule 127   ARITHMETICS -> EXP TK_div EXP
Rule 128   ARITHMETICS -> EXP TK_mod EXP
Rule 129   ARITHMETICS -> TK_minus EXP
Rule 130   RELATIONALS -> EXP TK_equalequal EXP
Rule 131   RELATIONALS -> EXP TK_equal EXP
Rule 132   RELATIONALS -> EXP TK_notequal EXP
Rule 133   RELATIONALS -> EXP TK_lessequal EXP
Rule 134   RELATIONALS -> EXP TK_greatequal EXP
Rule 135   RELATIONALS -> EXP TK_less EXP
Rule 136   RELATIONALS -> EXP TK_great EXP
Rule 137   LOGICS -> EXP TK_and EXP
Rule 138   LOGICS -> EXP TK_or EXP
Rule 139   LOGICS -> TK_not EXP
Rule 140   CAST -> RW_cas TK_lpar EXP RW_as TYPE TK_rpar
Rule 141   NATIVEFUNC -> RW_concatenar TK_lpar EXP TK_comma EXP TK_rpar
Rule 142   NATIVEFUNC -> RW_substraer TK_lpar EXP TK_comma EXP TK_comma EXP TK_rpar
Rule 143   NATIVEFUNC -> RW_hoy TK_lpar TK_rpar
Rule 144   TERNARY -> RW_if TK_lpar EXP TK_comma EXP TK_comma EXP TK_rpar
Rule 145   TYPE -> RW_int
Rule 146   TYPE -> RW_bit
Rule 147   TYPE -> RW_decimal
Rule 148   TYPE -> RW_date
Rule 149   TYPE -> RW_datetime
Rule 150   TYPE -> RW_nchar
Rule 151   TYPE -> RW_nvarchar

Terminals, with rules where they appear

RW_add               : 58
RW_alter             : 57
RW_as                : 42 43 77 78 80 81 95 96 101 140
RW_base              : 28
RW_begin             : 76 102 103
RW_bit               : 146
RW_break             : 24
RW_cas               : 140
RW_case              : 77 78 79 80 81 82
RW_column            : 61
RW_concatenar        : 141
RW_contar            : 
RW_continue          : 25
RW_create            : 28 45 93 94 95 96 97 98
RW_data              : 28
RW_date              : 148
RW_datetime          : 149
RW_decimal           : 147
RW_declare           : 29 30
RW_delete            : 73
RW_drop              : 59 62
RW_else              : 74 89
RW_end               : 74 75 76 77 78 79 80 81 82 102 103
RW_for               : 92
RW_foreing           : 52
RW_from              : 35 36 73
RW_function          : 93 94
RW_hoy               : 143
RW_if                : 74 74 75 75 76 144
RW_in                : 92
RW_insert            : 63
RW_int               : 145
RW_into              : 63
RW_key               : 52 53 54 56
RW_loop              : 92
RW_nchar             : 150
RW_not               : 53 54 55
RW_null              : 53 54 55 122
RW_nvarchar          : 151
RW_primary           : 53 54 56
RW_print             : 90
RW_procedure         : 95 96 97 98
RW_ref               : 52
RW_rename            : 60 61
RW_return            : 26 27
RW_returns           : 93 94
RW_select            : 35 36 37
RW_set               : 34 68
RW_substraer         : 142
RW_table             : 45 57 62 72
RW_then              : 74 75 88 89
RW_to                : 60 61
RW_truncate          : 72
RW_update            : 68
RW_values            : 63
RW_when              : 88
RW_where             : 35 68 73
RW_while             : 91
TK_and               : 137
TK_comma             : 31 40 46 64 66 69 99 106 141 142 142 144 144
TK_date              : 120
TK_datetime          : 121
TK_decimal           : 119
TK_div               : 127
TK_dot               : 92
TK_equal             : 30 34 71 131
TK_equalequal        : 130
TK_field             : 28 35 36 43 45 48 49 50 51 52 52 52 57 58 59 60 61 61 62 63 64 65 68 71 72 73 77 80 93 94 95 96 97 98 104 105 116
TK_great             : 136
TK_greatequal        : 134
TK_id                : 30 33 34 92 101 115
TK_int               : 48 50 118
TK_less              : 135
TK_lessequal         : 133
TK_lpar              : 45 48 50 52 52 63 63 93 94 104 105 123 140 141 142 143 144
TK_minus             : 125 129
TK_mod               : 128
TK_mult              : 39 126
TK_not               : 139
TK_notequal          : 132
TK_nvarchar          : 42 78 81 117
TK_or                : 138
TK_plus              : 124
TK_rpar              : 45 48 50 52 52 63 63 93 94 104 105 123 140 141 142 143 144
TK_semicolon         : 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
error                : 

Nonterminals, with rules where they appear

ACTION               : 57
ALTERTAB             : 7
ARGS                 : 104 106
ARITHMETICS          : 108
ASIGNID              : 15
ATTRIBUTE            : 46 47
ATTRIBUTES           : 45 46
CALLFUNC             : 21 113
CASESTRUCT_S         : 17
CAST                 : 111
CREATEDB             : 5
CREATETABLE          : 6
DECLAREID            : 14
DECLID               : 31 32
DECLIDS              : 29 31
DELETETAB            : 12
DROPTAB              : 8
ELSE                 : 83 85
ENCAP                : 22 91 92 93 94 95 96 97 98
EXP                  : 26 30 34 35 42 43 44 66 67 68 71 73 74 75 76 77 78 79 88 88 89 90 91 92 92 106 107 123 124 124 125 125 126 126 127 127 128 128 129 130 130 131 131 132 132 133 133 134 134 135 135 136 136 137 137 138 138 139 140 141 141 142 142 142 144 144 144
FIELDS               : 35 36
FORSTRUCT            : 19
FUNCDEC              : 20
IDS                  : 40 41
IFSTRUCT             : 16
INIT                 : 0
INSERTREG            : 9
INSTRUCTION          : 3 4
INSTRUCTIONS         : 1 3 74 74 75 76 102
LIST_ATTRIBS         : 63 64
LIST_EXPS            : 63 66
LIST_IDS             : 37 38 40
LOGICS               : 110
NATIVEFUNC           : 112
PARAM                : 99 100
PARAMS               : 93 95 97 99
PRINT                : 23
PROPS                : 48 49
RELATIONALS          : 109
SELECT               : 13
TERNARY              : 114
TRUNCATETAB          : 11
TYPE                 : 30 33 48 49 50 51 58 93 94 101 140
UPDATETAB            : 10
VALUESTAB            : 68 69
VALUETAB             : 69 70
WHEN                 : 86 87
WHENELSE             : 77 78 79 80 81 82
WHENS                : 83 84 86
WHILESTRUCT          : 18

Parsing method: LALR

state 0

    (0) S' -> . INIT
    (1) INIT -> . INSTRUCTIONS
    (2) INIT -> .
    (3) INSTRUCTIONS -> . INSTRUCTIONS INSTRUCTION
    (4) INSTRUCTIONS -> . INSTRUCTION
    (5) INSTRUCTION -> . CREATEDB TK_semicolon
    (6) INSTRUCTION -> . CREATETABLE TK_semicolon
    (7) INSTRUCTION -> . ALTERTAB TK_semicolon
    (8) INSTRUCTION -> . DROPTAB TK_semicolon
    (9) INSTRUCTION -> . INSERTREG TK_semicolon
    (10) INSTRUCTION -> . UPDATETAB TK_semicolon
    (11) INSTRUCTION -> . TRUNCATETAB TK_semicolon
    (12) INSTRUCTION -> . DELETETAB TK_semicolon
    (13) INSTRUCTION -> . SELECT TK_semicolon
    (14) INSTRUCTION -> . DECLAREID TK_semicolon
    (15) INSTRUCTION -> . ASIGNID TK_semicolon
    (16) INSTRUCTION -> . IFSTRUCT TK_semicolon
    (17) INSTRUCTION -> . CASESTRUCT_S TK_semicolon
    (18) INSTRUCTION -> . WHILESTRUCT TK_semicolon
    (19) INSTRUCTION -> . FORSTRUCT TK_semicolon
    (20) INSTRUCTION -> . FUNCDEC TK_semicolon
    (21) INSTRUCTION -> . CALLFUNC TK_semicolon
    (22) INSTRUCTION -> . ENCAP TK_semicolon
    (23) INSTRUCTION -> . PRINT TK_semicolon
    (24) INSTRUCTION -> . RW_break TK_semicolon
    (25) INSTRUCTION -> . RW_continue TK_semicolon
    (26) INSTRUCTION -> . RW_return EXP TK_semicolon
    (27) INSTRUCTION -> . RW_return TK_semicolon
    (28) CREATEDB -> . RW_create RW_data RW_base TK_field
    (45) CREATETABLE -> . RW_create RW_table TK_field TK_lpar ATTRIBUTES TK_rpar
    (57) ALTERTAB -> . RW_alter RW_table TK_field ACTION
    (62) DROPTAB -> . RW_drop RW_table TK_field
    (63) INSERTREG -> . RW_insert RW_into TK_field TK_lpar LIST_ATTRIBS TK_rpar RW_values TK_lpar LIST_EXPS TK_rpar
    (68) UPDATETAB -> . RW_update TK_field RW_set VALUESTAB RW_where EXP
    (72) TRUNCATETAB -> . RW_truncate RW_table TK_field
    (73) DELETETAB -> . RW_delete RW_from TK_field RW_where EXP
    (35) SELECT -> . RW_select FIELDS RW_from TK_field RW_where EXP
    (36) SELECT -> . RW_select FIELDS RW_from TK_field
    (37) SELECT -> . RW_select LIST_IDS
    (29) DECLAREID -> . RW_declare DECLIDS
    (30) DECLAREID -> . RW_declare TK_id TYPE TK_equal EXP
    (34) ASIGNID -> . RW_set TK_id TK_equal EXP
    (74) IFSTRUCT -> . RW_if EXP RW_then INSTRUCTIONS RW_else INSTRUCTIONS RW_end RW_if
    (75) IFSTRUCT -> . RW_if EXP RW_then INSTRUCTIONS RW_end RW_if
    (76) IFSTRUCT -> . RW_if EXP RW_begin INSTRUCTIONS RW_end
    (77) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end RW_as TK_field
    (78) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end RW_as TK_nvarchar
    (79) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end
    (80) CASESTRUCT_S -> . RW_case WHENELSE RW_end RW_as TK_field
    (81) CASESTRUCT_S -> . RW_case WHENELSE RW_end RW_as TK_nvarchar
    (82) CASESTRUCT_S -> . RW_case WHENELSE RW_end
    (91) WHILESTRUCT -> . RW_while EXP ENCAP
    (92) FORSTRUCT -> . RW_for TK_id RW_in EXP TK_dot EXP ENCAP RW_loop
    (93) FUNCDEC -> . RW_create RW_function TK_field TK_lpar PARAMS TK_rpar RW_returns TYPE ENCAP
    (94) FUNCDEC -> . RW_create RW_function TK_field TK_lpar TK_rpar RW_returns TYPE ENCAP
    (95) FUNCDEC -> . RW_create RW_procedure TK_field PARAMS RW_as ENCAP
    (96) FUNCDEC -> . RW_create RW_procedure TK_field RW_as ENCAP
    (97) FUNCDEC -> . RW_create RW_procedure TK_field PARAMS ENCAP
    (98) FUNCDEC -> . RW_create RW_procedure TK_field ENCAP
    (104) CALLFUNC -> . TK_field TK_lpar ARGS TK_rpar
    (105) CALLFUNC -> . TK_field TK_lpar TK_rpar
    (102) ENCAP -> . RW_begin INSTRUCTIONS RW_end
    (103) ENCAP -> . RW_begin RW_end
    (90) PRINT -> . RW_print EXP

    $end            reduce using rule 2 (INIT -> .)
    RW_break        shift and go to state 23
    RW_continue     shift and go to state 24
    RW_return       shift and go to state 25
    RW_create       shift and go to state 26
    RW_alter        shift and go to state 28
    RW_drop         shift and go to state 29
    RW_insert       shift and go to state 30
    RW_update       shift and go to state 31
    RW_truncate     shift and go to state 33
    RW_delete       shift and go to state 34
    RW_select       shift and go to state 35
    RW_declare      shift and go to state 36
    RW_set          shift and go to state 32
    RW_if           shift and go to state 37
    RW_case         shift and go to state 39
    RW_while        shift and go to state 40
    RW_for          shift and go to state 41
    TK_field        shift and go to state 27
    RW_begin        shift and go to state 38
    RW_print        shift and go to state 42

    INIT                           shift and go to state 1
    INSTRUCTIONS                   shift and go to state 2
    INSTRUCTION                    shift and go to state 3
    CREATEDB                       shift and go to state 4
    CREATETABLE                    shift and go to state 5
    ALTERTAB                       shift and go to state 6
    DROPTAB                        shift and go to state 7
    INSERTREG                      shift and go to state 8
    UPDATETAB                      shift and go to state 9
    TRUNCATETAB                    shift and go to state 10
    DELETETAB                      shift and go to state 11
    SELECT                         shift and go to state 12
    DECLAREID                      shift and go to state 13
    ASIGNID                        shift and go to state 14
    IFSTRUCT                       shift and go to state 15
    CASESTRUCT_S                   shift and go to state 16
    WHILESTRUCT                    shift and go to state 17
    FORSTRUCT                      shift and go to state 18
    FUNCDEC                        shift and go to state 19
    CALLFUNC                       shift and go to state 20
    ENCAP                          shift and go to state 21
    PRINT                          shift and go to state 22

state 1

    (0) S' -> INIT .



state 2

    (1) INIT -> INSTRUCTIONS .
    (3) INSTRUCTIONS -> INSTRUCTIONS . INSTRUCTION
    (5) INSTRUCTION -> . CREATEDB TK_semicolon
    (6) INSTRUCTION -> . CREATETABLE TK_semicolon
    (7) INSTRUCTION -> . ALTERTAB TK_semicolon
    (8) INSTRUCTION -> . DROPTAB TK_semicolon
    (9) INSTRUCTION -> . INSERTREG TK_semicolon
    (10) INSTRUCTION -> . UPDATETAB TK_semicolon
    (11) INSTRUCTION -> . TRUNCATETAB TK_semicolon
    (12) INSTRUCTION -> . DELETETAB TK_semicolon
    (13) INSTRUCTION -> . SELECT TK_semicolon
    (14) INSTRUCTION -> . DECLAREID TK_semicolon
    (15) INSTRUCTION -> . ASIGNID TK_semicolon
    (16) INSTRUCTION -> . IFSTRUCT TK_semicolon
    (17) INSTRUCTION -> . CASESTRUCT_S TK_semicolon
    (18) INSTRUCTION -> . WHILESTRUCT TK_semicolon
    (19) INSTRUCTION -> . FORSTRUCT TK_semicolon
    (20) INSTRUCTION -> . FUNCDEC TK_semicolon
    (21) INSTRUCTION -> . CALLFUNC TK_semicolon
    (22) INSTRUCTION -> . ENCAP TK_semicolon
    (23) INSTRUCTION -> . PRINT TK_semicolon
    (24) INSTRUCTION -> . RW_break TK_semicolon
    (25) INSTRUCTION -> . RW_continue TK_semicolon
    (26) INSTRUCTION -> . RW_return EXP TK_semicolon
    (27) INSTRUCTION -> . RW_return TK_semicolon
    (28) CREATEDB -> . RW_create RW_data RW_base TK_field
    (45) CREATETABLE -> . RW_create RW_table TK_field TK_lpar ATTRIBUTES TK_rpar
    (57) ALTERTAB -> . RW_alter RW_table TK_field ACTION
    (62) DROPTAB -> . RW_drop RW_table TK_field
    (63) INSERTREG -> . RW_insert RW_into TK_field TK_lpar LIST_ATTRIBS TK_rpar RW_values TK_lpar LIST_EXPS TK_rpar
    (68) UPDATETAB -> . RW_update TK_field RW_set VALUESTAB RW_where EXP
    (72) TRUNCATETAB -> . RW_truncate RW_table TK_field
    (73) DELETETAB -> . RW_delete RW_from TK_field RW_where EXP
    (35) SELECT -> . RW_select FIELDS RW_from TK_field RW_where EXP
    (36) SELECT -> . RW_select FIELDS RW_from TK_field
    (37) SELECT -> . RW_select LIST_IDS
    (29) DECLAREID -> . RW_declare DECLIDS
    (30) DECLAREID -> . RW_declare TK_id TYPE TK_equal EXP
    (34) ASIGNID -> . RW_set TK_id TK_equal EXP
    (74) IFSTRUCT -> . RW_if EXP RW_then INSTRUCTIONS RW_else INSTRUCTIONS RW_end RW_if
    (75) IFSTRUCT -> . RW_if EXP RW_then INSTRUCTIONS RW_end RW_if
    (76) IFSTRUCT -> . RW_if EXP RW_begin INSTRUCTIONS RW_end
    (77) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end RW_as TK_field
    (78) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end RW_as TK_nvarchar
    (79) CASESTRUCT_S -> . RW_case EXP WHENELSE RW_end
    (80) CASESTRUCT_S -> . RW_case WHENELSE RW_end RW_as TK_field
    (81) CASESTRUCT_S -> . RW_case WHENELSE RW_end RW_as TK_nvarchar
    (82) CASESTRUCT_S -> . RW_case WHENELSE RW_end
    (91) WHILESTRUCT -> . RW_while EXP ENCAP
    (92) FORSTRUCT -> . RW_for TK_id RW_in EXP TK_dot EXP ENCAP RW_loop
    (93) FUNCDEC -> . RW_create RW_function TK_field TK_lpar PARAMS TK_rpar RW_returns TYPE ENCAP
    (94) FUNCDEC -> . RW_create RW_function TK_field TK_lpar TK_rpar RW_returns TYPE ENCAP
    (95) FUNCDEC -> . RW_create RW_procedure TK_field PARAMS RW_as ENCAP
    (96) FUNCDEC -> . RW_create RW_procedure TK_field RW_as ENCAP
    (97) FUNCDEC -> . RW_create RW_procedure TK_field PARAMS ENCAP
    (98) FUNCDEC -> . RW_create RW_procedure TK_field ENCAP
    (104) CALLFUNC -> . TK_field TK_lpar ARGS TK_rpar
    (105) CALLFUNC -> . TK_field TK_lpar TK_rpar
    (102) ENCAP -> . RW_begin INSTRUCTIONS RW_end
    (103) ENCAP -> . RW_begin RW_end
    (90) PRINT -> . RW_print EXP

    $end            reduce using rule 1 (INIT -> INSTRUCTIONS .)
    RW_break        shift and go to state 23
    RW_continue     shift and go to state 24
    RW_return       shift and go to state 25
    RW_create       shift and go to state 26
    RW_alter        shift and go to state 28
    RW_drop         shift and go to state 29
    RW_insert       shift and go to state 30
    RW_update       shift and go to state 31
    RW_truncate     shift and go to state 33
    RW_delete       shift and go to state 34
    RW_select       shift and go to state 35
    RW_declare      shift and go to state 36
    RW_set          shift and go to state 32
    RW_if           shift and go to state 37
    RW_case         shift and go to state 39
    RW_while        shift and go to state 40
    RW_for          shift and go to state 41
    TK_field        shift and go to state 27
    RW_begin        shift and go to state 38
    RW_print        shift and go to state 42

    INSTRUCTION                    shift and go to state 43
    CREATEDB                       shift and go to state 4
    CREATETABLE                    shift and go to state 5
    ALTERTAB                       shift and go to state 6
    DROPTAB                        shift and go to state 7
    INSERTREG                      shift and go to state 8
    UPDATETAB                      shift and go to state 9
    TRUNCATETAB                    shift and go to state 10
    DELETETAB                      shift and go to state 11
    SELECT                         shift and go to state 12
    DECLAREID                      shift and go to state 13
    ASIGNID                        shift and go to state 14
    IFSTRUCT                       shift and go to state 15
    CASESTRUCT_S                   shift and go to state 16
    WHILESTRUCT                    shift and go to state 17
    FORSTRUCT                      shift and go to state 18
    FUNCDEC                        shift and go to state 19
    CALLFUNC                       shift and go to state 20
    ENCAP                          shift and go to state 21
    PRINT                          shift and go to state 22

state 3

    (4) INSTRUCTIONS -> INSTRUCTION .

    RW_break        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_continue     reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_return       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_create       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_alter        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_drop         reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_insert       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_update       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_truncate     reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_delete       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_select       reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_declare      reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_set          reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_if           reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_case         reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_while        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_for          reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    TK_field        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_begin        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_print        reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    $end            reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_end          reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    RW_else         reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)


state 4

    (5) INSTRUCTION -> CREATEDB . TK_semicolon

    TK_semicolon    shift and go to state 44


state 5

    (6) INSTRUCTION -> CREATETABLE . TK_semicolon

    TK_semicolon    shift and go to state 45


state 6

    (7) INSTRUCTION -> ALTERTAB . TK_semicolon

    TK_semicolon    shift and go to state 46


state 7

    (8) INSTRUCTION -> DROPTAB . TK_semicolon

    TK_semicolon    shift and go to state 47


state 8

    (9) INSTRUCTION -> INSERTREG . TK_semicolon

    TK_semicolon    shift and go to state 48


state 9

    (10) INSTRUCTION -> UPDATETAB . TK_semicolon

    TK_semicolon    shift and go to state 49


state 10

    (11) INSTRUCTION -> TRUNCATETAB . TK_semicolon

    TK_semicolon    shift and go to state 50


state 11

    (12) INSTRUCTION -> DELETETAB . TK_semicolon

    TK_semicolon    shift and go to state 51


state 12

    (13) INSTRUCTION -> SELECT . TK_semicolon

    TK_semicolon    shift and go to state 52


state 13

    (14) INSTRUCTION -> DECLAREID . TK_semicolon

    TK_semicolon    shift and go to state 53


state 14

    (15) INSTRUCTION -> ASIGNID . TK_semicolon

    TK_semicolon    shift and go to state 54


state 15

    (16) INSTRUCTION -> IFSTRUCT . TK_semicolon

    TK_semicolon    shift and go to state 55


state 16

    (17) INSTRUCTION -> CASESTRUCT_S . TK_semicolon

    TK_semicolon    shift and go to state 56


state 17

    (18) INSTRUCTION -> WHILESTRUCT . TK_semicolon

    TK_semicolon    shift and go to state 57


state 18

    (19) INSTRUCTION -> FORSTRUCT . TK_semicolon

    TK_semicolon    shift and go to state 58


state 19

    (20) INSTRUCTION -> FUNCDEC . TK_semicolon

    TK_semicolon    shift and go to state 59


state 20

    (21) INSTRUCTION -> CALLFUNC . TK_semicolon

    TK_semicolon    shift and go to state 60


state 21

    (22) INSTRUCTION -> ENCAP . TK_semicolon

    TK_semicolon    shift and go to state 61


state 22

    (23) INSTRUCTION -> PRINT . TK_semicolon

    TK_semicolon    shift and go to state 62


state 23

    (24) INSTRUCTION -> RW_break . TK_semicolon

    TK_semicolon    shift and go to state 63


state 24

    (25) INSTRUCTION -> RW_continue . TK_semicolon

    TK_semicolon    shift and go to state 64


state 25
